--- a/astro/index.html
+++ b/astro/index.html
@@ -17,13 +17,13 @@
     </div>
     <div class="header-in-2">
         <a href="https://twitter.com/iaa2005">
-            <img class="img-social" src="https://iaa2005.tk/assets/images/twitter.svg">
+            <img class="img-social" src="../images/twitter.svg">
         </a>
         <a href="https://t.me/iaa2005">
-            <img class="img-social" src="https://iaa2005.tk/assets/images/telegram.svg">
+            <img class="img-social" src="../images/telegram.svg">
         </a>
         <a href="https://github.com/iaa2005">
-            <img class="img-social" src="https://iaa2005.tk/assets/images/github.svg">
+            <img class="img-social" src="../images/github.svg">
         </a>
     </div>
 </header>
