--- a/astro/index.html
+++ b/astro/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>IAA Labs Inc. | Astronomy</title>
     <script src="../jquery.min.js"></script>
     <script src="../index-2.js"></script>
