--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>IAA Labs Inc.</title>
     <script src="jquery.min.js"></script>
     <script src="index.js"></script>
