--- a/index.html
+++ b/index.html
@@ -8,6 +8,11 @@
     <script src="index.js"></script>
 </head>
 <body>
+<div class="block-4">
+    <a class="center-img-out" href="https://yuamble.tk/">
+        <img class="center-img" src="images/yuamble-logo.svg">
+    </a>
+</div>
 <div class="block-3">
     <a class="center-img-out" href="https://otherscience.xyz/">
         <img class="center-img" src="images/footer-otherscience.svg">
@@ -50,7 +55,7 @@
         margin: 0;
         background: white;
         width: 100vw;
-        height: 750vh;
+        height: 950vh;
     }
     header {
         top: 0;
@@ -86,7 +91,7 @@
     .header-text:hover {
         color: black;
     }
-    .block-main, .block-1, .block-2, .block-3 {
+    .block-main, .block-1, .block-2, .block-3, .block-4 {
         position: fixed;
         top: 0;
         height: 100vh;
@@ -94,7 +99,7 @@
         display: grid;
         background: white;
     }
-    .block-1, .block-2, .block-3 {
+    .block-1, .block-2, .block-3, .block-4 {
         opacity: 0;
     }
     .center-img-out {
