--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
         margin: 0;
         background: white;
         width: 100vw;
-        height: 950vh;
+        height: 980vh;
     }
     header {
         top: 0;
@@ -104,13 +104,16 @@
     }
     .center-img-out {
         margin: auto;
+        height: fit-content;
+        padding-left: 70px;
+        padding-right: 70px;
+        width: -webkit-fill-available;
     }
     .center-img {
-        padding-left: 50px;
-        padding-right: 50px;
-        height: 25vh;
-        max-height: 250px;
+        max-height: 200px;
+        height: auto;
         display: block;
+        margin: auto;
     }
     .remove {
         display: none;
