--- a/about/index.html
+++ b/about/index.html
@@ -19,10 +19,10 @@
         Otherscience.</a>
     <a>Otherscience — проект, над котором я сейчас работаю. Проект создан для децентрализованных олимпиад и
         многопользовательских игр. А NFT, генерирующиеся при правильном ответе на задачу, дадут возможность
-        получить выртуальные предметы, земли, скины для игр. Здесь NFT мотивируют учеников рещать задачи по физике и
+        получить выртуальные предметы, земли, скины для игр. Здесь NFT мотивируют учеников решать задачи по физике и
         астрономии.</a>
-    <a>Yuamble — блокчейн без комиссий и с быстрой обработкой транзакций. В нем также будет добавлен EVM (Ethereum Virtual
-    Machine).</a>
+    <a>Yuamble — постквантовый блокчейн без комиссий и с быстрой обработкой транзакций. Работает на PoS. В нем
+        также будет EVM (Ethereum Virtual Machine).</a>
 </div>
 <header>
     <div class="header-in">
