--- a/about/index.html
+++ b/about/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>IAA Labs Inc.</title>
+    <link rel="icon" type="image/x-icon" href="../favicon.ico">
 </head>
 <body>
 <div class="div-main">
