--- a/astro/index.html
+++ b/astro/index.html
@@ -6,6 +6,7 @@
     <title>IAA Labs Inc. | Astronomy</title>
     <script src="../jquery.min.js"></script>
     <script src="../index-2.js"></script>
+    <link rel="icon" type="image/x-icon" href="../favicon.ico">
 </head>
 <body>
 <div class="div-main">
