--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>IAA Labs Inc.</title>
     <script src="jquery.min.js"></script>
     <script src="index.js"></script>
+    <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
 <body>
 <div class="block-4">
