--- a/astro/index.html
+++ b/astro/index.html
@@ -11,7 +11,7 @@
 <body>
 <div class="div-main">
     <a class="text">270 дней астрономии</a>
-    <a class="text">Speedrun решений задач по астрономии.</a>
+    <a class="text">Speedrun решений задач по астрономии. Начало: 6 Июня 2022</a>
     <div class="calendar-div"></div>
 </div>
 <header>
@@ -79,6 +79,7 @@
         font-size: 14px;
         margin-left: auto;
         margin-right: auto;
+        margin-bottom: 10px;
     }
     .header-text:hover {
         color: black;
