--- a/about/index.html
+++ b/about/index.html
@@ -18,7 +18,7 @@
         даже нужные книги для олимпиад.</a>
     <a>FizCoin — монета, или правильнее токен, разработанный на блокчейне Polygon. Создан для Fizmat DAO и проекта
         Otherscience.</a>
-    <a>Otherscience — проект, над котором я сейчас работаю. Проект создан для децентрализованных олимпиад и
+    <a>Otherscience — проект, над которым я сейчас работаю. Проект создан для децентрализованных олимпиад и
         многопользовательских игр. А NFT, генерирующиеся при правильном ответе на задачу, дадут возможность
         получить выртуальные предметы, земли, скины для игр. Здесь NFT мотивируют учеников решать задачи по физике и
         астрономии.</a>
