--- a/about/index.html
+++ b/about/index.html
@@ -1,12 +1,13 @@
 <!DOCTYPE html>
-<html lang="ru">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>IAA Labs Inc.</title>
+    <title>IAA Labs Inc. | About me</title>
     <link rel="icon" type="image/x-icon" href="../favicon.ico">
 </head>
 <body>
 <div class="div-main">
+    <!--
     <a>О себе</a>
     <a>Меня зовут Иванов Александр, и мне 17 лет. Я учусь в Физтех-лицее им. П.Л. Капицы в г.Долгопрудном.
         Учусь на физмат профиле. Участник заключительного этапа ВСОШ по астрономии. Интересуюсь физикой, астрономией,
@@ -24,6 +25,25 @@
         астрономии.</a>
     <a>Yuamble — постквантовый блокчейн без комиссий и с быстрой обработкой транзакций. Работает на PoS. В нем
         также будет EVM (Ethereum Virtual Machine).</a>
+        -->
+
+    <a>About me</a>
+    <a>My name is Alexander Ivanov, and I am 17 years old. I am studying at the P.L. Kapitsa Physics and Technology
+        Lyceum in Dolgoprudny. I study at the physical education profile. Participant of the final stage of the WSSH
+        in astronomy. I am interested in physics, astronomy, programming and mathematics.</a>
+    <a>Most of all, I like programming: making websites, writing programs in different programming languages and
+        smart contracts for the blockchain. At the moment I am developing several projects: Fizmat, FizCoin,
+        Otherscience and Yuamble.</a>
+    <a>Fizmat is a completed project, created for students. It has everything: physics, mathematics, astronomy,
+        and even the necessary books for the Olympiads.</a>
+    <a>FizCoin is a coin, or rather a token, developed on the Polygon blockchain. Created for Fizmat DAO and the
+        Otherscience project.</a>
+    <a>Otherscience is a project I'm currently working on. The project was created for decentralized Olympiads and
+        multiplayer games. And NFTs generated with the correct answer to the task will give you the opportunity to get
+        virtual items, lands, skins for games. Here, NFTS motivate students to solve problems in physics and
+        astronomy.</a>
+    <a>Yuamble is a post—quantum blockchain with no fees and fast transaction processing. Works on PoS.
+        It will also have an EVM (Ethereum Virtual Machine).</a>
 </div>
 <header>
     <div class="header-in">
