--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="ru">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
 <!--    <meta name="viewport" content="width=device-width, initial-scale=1">-->
@@ -36,9 +36,9 @@
 </div>
 <header>
     <div class="header-in">
-        <a class="header-text" href="">Проекты</a>
-        <a class="header-text" href="about">О себе</a>
-        <a class="header-text" href="astro">Астрономия</a>
+        <a class="header-text" href="">Projects</a>
+        <a class="header-text" href="about">About me</a>
+        <a class="header-text" href="astro">Astro</a>
     </div>
 
     <div class="header-in-2">
