--- a/astro/index.html
+++ b/astro/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="ru">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
 <!--    <meta name="viewport" content="width=device-width, initial-scale=1">-->
@@ -10,8 +10,8 @@
 </head>
 <body>
 <div class="div-main">
-    <a class="text">270 дней астрономии</a>
-    <a class="text">Speedrun решений задач по астрономии. Начало: 6 Июня 2022</a>
+    <a class="text">270 days of astronomy</a>
+    <a class="text">Speedrun solutions to astronomy problems. Beginning: June 6, 2022</a>
     <div class="calendar-div"></div>
 </div>
 <header>
