--- a/astro/index.html
+++ b/astro/index.html
@@ -16,9 +16,9 @@
 </div>
 <header>
     <div class="header-in">
-        <a class="header-text" href="../">Проекты</a>
-        <a class="header-text" href="../about">О себе</a>
-        <a class="header-text" href="../astro">Астрономия</a>
+        <a class="header-text" href="../">Projects</a>
+        <a class="header-text" href="../about">About me</a>
+        <a class="header-text" href="../astro">Astro</a>
     </div>
     <div class="header-in-2">
         <a href="https://twitter.com/iaa2005">
