--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
     <div class="header-in">
         <a class="header-text" href="">Projects</a>
         <a class="header-text" href="about">About me</a>
-        <a class="header-text" href="astro">Astro</a>
+        <a class="header-text" href="https://blog.iaa2005.tk">Blog</a>
     </div>
 
     <div class="header-in-2">
